<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#71aced"
        app:navigationIcon="?attr/homeAsUpIndicator">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/addCommentTextView"
            android:textColor="#ffffff"
            android:textSize="10pt"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10pt"
        android:gravity="center"
        android:text="@string/likeDislike"
        android:textSize="10pt"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5pt"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10pt"
            android:background="#ffffff"
            android:onClick="onLikeClick"
            android:src="@drawable/like" />

        <ImageButton
            android:id="@+id/dislikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:onClick="onDislikeClick"
            android:src="@drawable/dislike" />
    </LinearLayout>

    <EditText
        android:id="@+id/comment_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5pt"
        android:layout_marginTop="10pt"
        android:ems="10"
        android:hint="@string/addCommentTextView"
        android:inputType="textMultiLine" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5pt"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancel_btn"
            android:text="@string/cancelBtn" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="submit_btn"
            android:text="@string/submitComment" />
    </LinearLayout>
</LinearLayout>